--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 ### 虎科大機械設計工程系
 
 <small>
-Created by [s40523230](http://chiamingyen.github.io/kmolab/blog/)
+Created by [s40523230](http://s40523230.github.io/blog/)
 </small>
 
 [甲班計算機程式課程網誌](blog/index.html)
